--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/setup-python@v5.6.0
         with:
           python-version: ${{ matrix.python }}
-      - run: uv run --locked tox run -e ${{ format('py{0}', matrix.python) }}
+      - run: uv run tox run -e ${{ format('py{0}', matrix.python) }}
   typing:
     runs-on: ubuntu-latest
     steps:
@@ -49,4 +49,4 @@ jobs:
         with:
           path: ./.mypy_cache
           key: mypy|${{ hashFiles('pyproject.toml') }}
-      - run: uv run --locked tox run -e typing
+      - run: uv run tox run -e typing
