--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -9,10 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.2.2
-      - uses: astral-sh/setup-uv@v6.0.1
-        with:
-          enable-cache: true
-          prune-cache: false
       - uses: actions/setup-python@5.6.0
         id: setup-python
         with:
@@ -21,6 +17,7 @@ jobs:
         with:
           path: ~/.cache/pre-commit
           key: pre-commit|${{ hashFiles('pyproject.toml', '.pre-commit-config.yaml') }}
-      - run: uv run --group pre-commit pre-commit run --show-diff-on-failure --color=always --all-files
+      - run: pip install pre-commit
+      - run: pre-commit run --show-diff-on-failure --color=always --all-files
       - uses: pre-commit-ci/lite-action@v1.1.0
         if: ${{ !cancelled() }}
