--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,8 +4,6 @@ python:
   install:
     - method: pip
       path: .
-      dependency_groups:
-        - docs
       extra_requirements:
         - all
 
@@ -13,6 +11,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.13"
+  jobs:
+    install:
+      - pip install --group docs
 
 # Optionally build your docs in additional formats such as PDF and ePub
 # formats:
