--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,8 +12,7 @@ build:
   tools:
     python: "3.13"
   jobs:
-    install:
-      - pip install --upgrade pip
+    post_install:
       - pip install --group docs
 
 # Optionally build your docs in additional formats such as PDF and ePub
