docs: add software/apptainer section to the example experiment configuration

--- a/docs/_static/examples/kiso-plankifier-experiment.yml
+++ b/docs/_static/examples/kiso-plankifier-experiment.yml
@@ -33,6 +33,11 @@ deployment:
         - execute-edge-daemon
       config-file: config/execute.conf
 
+software:
+  apptainer:
+    labels:
+      - execute-cloud-daemon
+
 sites:
   - kind: chameleon-edge
     walltime: "04:00:00"
