--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ version = "0.1.0a0"
 authors = [{ name = "Rajiv Mayani", email = "mayani@isi.edu" }]
 maintainers = [{ name = "Rajiv Mayani", email = "mayani@isi.edu" }]
 description = "Kiso experiment manager"
+readme = { file = "README.md", content-type = "text/markdown" }
 license = { file = "LICENSE.md" }
 requires-python = ">=3.9"
 classifiers = [
