--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ authors = [{ name = "Rajiv Mayani", email = "mayani@isi.edu" }]
 maintainers = [{ name = "Rajiv Mayani", email = "mayani@isi.edu" }]
 description = "Kiso experiment manager"
 readme = { file = "README.md", content-type = "text/markdown" }
-license = { file = "LICENSE.md" }
+license = "Apache-2.0"
+license-files = ["LICENSE.md"]
 requires-python = ">=3.9"
 classifiers = [
     "Development Status :: 3 - Alpha",
