--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Operating System :: MacOS",
     "Operating System :: POSIX",
     "Operating System :: POSIX :: Linux",
@@ -42,7 +43,7 @@ classifiers = [
 dependencies = [
     "enoslib>=10.1.0",
     "rich-click",
-    "jsonschema",
+    "jsonschema<3.3",
     "jsonschema-pyref",
     "PyYAML",
     "dacite",
@@ -65,6 +66,7 @@ kiso = "kiso.__main__:kiso"
 
 apptainer = "kiso.apptainer.__init__"
 docker = "kiso.docker.__init__"
+ollama = "kiso.ollama.__init__"
 
 [project.entry-points."kiso.deployment"]
 
