feat: add a new experiment type, shell, which can simply runs scripts
The `shell` experiment type takes an array of scripts to run and runs them sequentially.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ htcondor = "kiso.htcondor.__init__"
 [project.entry-points."kiso.experiment"]
 
 pegasus = "kiso.workflow.__init__"
+shell = "kiso.shell.__init__"
 
 [project.optional-dependencies]
 
