--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,6 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - { python: "3.14" }
           - { python: "3.13" }
           - { python: "3.12" }
           - { python: "3.11" }
