feat: multiple changes
1. Polish the plugin code and specification.
2. Remove console and log from constructors of plugins as console is not pickleable.
3. Move code to associate public IPs from the task module to the new ip module.
4. Rename workflow package to pegasus package.

--- a/docs/_static/examples/kiso-plankifier-experiment.yml
+++ b/docs/_static/examples/kiso-plankifier-experiment.yml
@@ -76,7 +76,7 @@ experiments:
     name: plankifier-experiment
     count: 1
     main: ./workflow.py
-    submit-node-labels:
+    submit_node_labels:
       - submit-daemon
     inputs:
       - labels:
