--- a/src/kiso/commons/main.yml
+++ b/src/kiso/commons/main.yml
@@ -33,6 +33,7 @@
           - epel-release
           - sqlite
           - findutils
+          - acl
         state: present
       when: ansible_facts['os_family'] == 'RedHat' and ansible_facts['distribution_major_version']|int > 7
 
@@ -45,6 +46,7 @@
           - python3-pip
           - sqlite3
           - findutils
+          - acl
         update_cache: yes
         state: present
       when: ansible_facts['distribution'] in ('Debian', 'Ubuntu')
