--- a/docs/_static/examples/kiso-plankifier-experiment.yml
+++ b/docs/_static/examples/kiso-plankifier-experiment.yml
@@ -31,7 +31,7 @@ deployment:
     - kind: execute
       labels:
         - execute-edge-daemon
-      config-file: config/execute.conf
+      config_file: config/execute.conf
 
 software:
   apptainer:
