--- a/src/kiso/commons/main.yml
+++ b/src/kiso/commons/main.yml
@@ -49,6 +49,8 @@
           - acl
         update_cache: yes
         state: present
+      retries: 3
+      delay: 5
       when: ansible_facts['distribution'] in ('Debian', 'Ubuntu')
 
     - name: Create a group
