ci: Pin Sphinx version to < 9 as sphinx_tab raises an error with versions > 9

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,7 +97,7 @@ tests = [
     "pytest-resource-path",
 ]
 docs = [
-    "sphinx",
+    "sphinx<9",
     "sphinx-book-theme",
     "sphinx-jsonschema",
     "sphinx_tabs",
