--- a/pyproject.toml
+++ b/pyproject.toml
@@ -193,7 +193,7 @@ markers = ["incremental"]
 
 [tool.tox]
 
-env_list = ["py37", "py38", "py39", "py310", "py311", "py312", "py313"]
+env_list = ["py39", "py310", "py311", "py312", "py313"]
 
 [tool.tox.env_run_base]
 
